lab/mod02/lab04/lab04/multi-ingress/kubia-rb-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: kubiaredblue
spec:
  rules:
  - host: kubiablue.example.com
    http:
      paths:
      - path: /
        backend:
          serviceName: kubiablue
          servicePort: 80
  - host: kubiared.example.com
    http:
      paths:
      - path: /
        backend:
          serviceName: kubiared
          servicePort: 80
